force-app/main/default/objects/Github_Provider__mdt/Github_Provider__mdt.object-meta.xml
<CustomObject>
    <label>Github Provider</label>
    <pluralLabel>Github Providers</pluralLabel>
</CustomObject>