force-app/main/default/objects/Github_Provider__mdt/fields/Auth_Url__c.field-meta.xml
<CustomField>
    <fullName>Auth_Url__c</fullName>
    <label>Auth Url</label>
    <type>Url</type>
</CustomField>