force-app/main/default/objects/Github_Provider__mdt/fields/Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Token_Url__c</fullName>
    <label>Token Url</label>
    <type>Url</type>
</CustomField>