force-app/main/default/objects/Github_Provider__mdt/fields/user_info_url__c.field-meta.xml
<CustomField>
    <fullName>user_info_url__c</fullName>
    <label>user info url</label>
    <type>Url</type>
</CustomField>